[project]
name = "tof-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
compress = ["zstandard>=0.25.0"]
image = [
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "clip",
    "markupsafe",
    "sqlite_vec",
]

[tool.uv.sources]
torch = [{ index = "torch-gpu", extra = "image" }]
torchvision = [{ index = "torch-gpu", extra = "image" }]
clip = { git = "https://github.com/openai/CLIP.git" }
markupsafe = [{ index = "pypi", extra = "image" }]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu121"


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
